--- a/src/components/DailyActivity.css
+++ b/src/components/DailyActivity.css
@@ -1,9 +1,10 @@
 .daily-activity-container{
     background-color: #FBFBFB;
     border-radius: 5px;
-    padding: 32px;
     position: relative;
     margin-bottom: 28px;
+    width: 100%;
+    height: 320px;
 }
 
 .daily-activity-title {
