--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -4,9 +4,8 @@
     justify-content: center;
     flex-direction: column;
     width: 117px;
-    height: 100vh;
+    min-height: calc(100vh + 91px);
     align-items: center;
-
 }
 
 .sidebar a {
@@ -32,5 +31,5 @@
     flex-direction: column;
     justify-content: space-evenly;
     gap: 20px;
-    
+
 }
